--- a/install
+++ b/install
@@ -1,7 +1,16 @@
-#!/bin/sh -Cue
+#!/bin/sh -Cu
 
-git config --global commit.template "${XDG_CONFIG_DIR}/git/message"
-git config --global core.attributesFile "${XDG_CONFIG_DIR}/git/attributes"
-git config --global core.excludesPath "${XDG_CONFIG_DIR}/git/excludes"
-git config --global core.hooksPath "${XDG_CONFIG_DIR}/git/hooks"
+ln -s "${PWD}/etc/git/"* "${XDG_CONFIG_HOME}/git"
+
+for ext in bin/git-*
+do
+	if [ -x "${ext}" ]
+	then ln -s "${PWD}/${ext}" "${WRKDIR}/bin"
+	fi
+done
+
+git config --global commit.template "${XDG_CONFIG_HOME}/git/message"
+git config --global --replace-all core.attributesFile "${XDG_CONFIG_HOME}/git/attributes"
+git config --global core.excludesFile "${XDG_CONFIG_HOME}/git/excludes"
+git config --global core.hooksPath "${XDG_CONFIG_HOME}/git/hooks"
 git config --global init.templateDir
